src/main/java/pdl/parser/antlr/PdlParser.java
// Generated from Pdl.g4 by ANTLR 4.7.2
package pdl.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PdlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, Star=7, Semicolon=8, QuestionMark=9, 
		Bar=10, Skip=11, Fail=12, If=13, Fi=14, Do=15, Od=16, Then=17, Else=18, 
		While=19, Repeat=20, Until=21, Union=22, Or=23, And=24, Not=25, LeftParenthesis=26, 
		RightParenthesis=27, LeftSquareBracket=28, RightSquareBracket=29, LeftCurlyBracket=30, 
		RightCurlyBracket=31, LeftAngle=32, RightAngle=33, Identifier=34, IdentifierLetter=35, 
		RightArrow=36, LeftRightArrow=37, Digit=38, Whitespace=39;
	public static final int
		RULE_pdl = 0, RULE_kripkeFrame = 1, RULE_states = 2, RULE_propositionMeaning = 3, 
		RULE_programMeaning = 4, RULE_pair = 5, RULE_formula = 6, RULE_hoarePartialCorrectness = 7, 
		RULE_falsity = 8, RULE_truth = 9, RULE_atomicFormula = 10, RULE_program = 11, 
		RULE_skip = 12, RULE_fail = 13, RULE_atomicProgram = 14, RULE_alternativeGuardedCommand = 15, 
		RULE_iterativeGuardedCommand = 16, RULE_guardedCommand = 17, RULE_iteProgram = 18, 
		RULE_whileProgram = 19, RULE_repeatProgram = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"pdl", "kripkeFrame", "states", "propositionMeaning", "programMeaning", 
			"pair", "formula", "hoarePartialCorrectness", "falsity", "truth", "atomicFormula", 
			"program", "skip", "fail", "atomicProgram", "alternativeGuardedCommand", 
			"iterativeGuardedCommand", "guardedCommand", "iteProgram", "whileProgram", 
			"repeatProgram"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'K'", "'='", "','", "'m'", "'0'", "'1'", "'*'", "';'", "'?'", 
			"'|'", "'skip'", "'fail'", "'if'", "'fi'", "'do'", "'od'", "'then'", 
			"'else'", "'while'", "'repeat'", "'until'", null, null, null, null, "'('", 
			"')'", "'['", "']'", "'{'", "'}'", "'<'", "'>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "Star", "Semicolon", "QuestionMark", 
			"Bar", "Skip", "Fail", "If", "Fi", "Do", "Od", "Then", "Else", "While", 
			"Repeat", "Until", "Union", "Or", "And", "Not", "LeftParenthesis", "RightParenthesis", 
			"LeftSquareBracket", "RightSquareBracket", "LeftCurlyBracket", "RightCurlyBracket", 
			"LeftAngle", "RightAngle", "Identifier", "IdentifierLetter", "RightArrow", 
			"LeftRightArrow", "Digit", "Whitespace"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pdl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PdlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PdlContext extends ParserRuleContext {
		public FormulaContext formula() {
			return getRuleContext(FormulaContext.class,0);
		}
		public KripkeFrameContext kripkeFrame() {
			return getRuleContext(KripkeFrameContext.class,0);
		}
		public PdlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pdl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterPdl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitPdl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitPdl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PdlContext pdl() throws RecognitionException {
		PdlContext _localctx = new PdlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pdl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(42);
				kripkeFrame();
				}
			}

			setState(45);
			formula(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KripkeFrameContext extends ParserRuleContext {
		public StatesContext states() {
			return getRuleContext(StatesContext.class,0);
		}
		public List<PropositionMeaningContext> propositionMeaning() {
			return getRuleContexts(PropositionMeaningContext.class);
		}
		public PropositionMeaningContext propositionMeaning(int i) {
			return getRuleContext(PropositionMeaningContext.class,i);
		}
		public List<ProgramMeaningContext> programMeaning() {
			return getRuleContexts(ProgramMeaningContext.class);
		}
		public ProgramMeaningContext programMeaning(int i) {
			return getRuleContext(ProgramMeaningContext.class,i);
		}
		public KripkeFrameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kripkeFrame; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterKripkeFrame(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitKripkeFrame(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitKripkeFrame(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KripkeFrameContext kripkeFrame() throws RecognitionException {
		KripkeFrameContext _localctx = new KripkeFrameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_kripkeFrame);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			states();
			setState(51);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(48);
					propositionMeaning();
					}
					} 
				}
				setState(53);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(54);
				programMeaning();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatesContext extends ParserRuleContext {
		public TerminalNode LeftCurlyBracket() { return getToken(PdlParser.LeftCurlyBracket, 0); }
		public List<TerminalNode> Identifier() { return getTokens(PdlParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(PdlParser.Identifier, i);
		}
		public TerminalNode RightCurlyBracket() { return getToken(PdlParser.RightCurlyBracket, 0); }
		public StatesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_states; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterStates(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitStates(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitStates(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatesContext states() throws RecognitionException {
		StatesContext _localctx = new StatesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_states);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(T__0);
			setState(61);
			match(T__1);
			setState(62);
			match(LeftCurlyBracket);
			setState(63);
			match(Identifier);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(64);
				match(T__2);
				setState(65);
				match(Identifier);
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(RightCurlyBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropositionMeaningContext extends ParserRuleContext {
		public TerminalNode LeftParenthesis() { return getToken(PdlParser.LeftParenthesis, 0); }
		public List<TerminalNode> Identifier() { return getTokens(PdlParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(PdlParser.Identifier, i);
		}
		public TerminalNode RightParenthesis() { return getToken(PdlParser.RightParenthesis, 0); }
		public TerminalNode LeftCurlyBracket() { return getToken(PdlParser.LeftCurlyBracket, 0); }
		public TerminalNode RightCurlyBracket() { return getToken(PdlParser.RightCurlyBracket, 0); }
		public PropositionMeaningContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propositionMeaning; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterPropositionMeaning(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitPropositionMeaning(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitPropositionMeaning(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropositionMeaningContext propositionMeaning() throws RecognitionException {
		PropositionMeaningContext _localctx = new PropositionMeaningContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_propositionMeaning);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(T__3);
			setState(74);
			match(LeftParenthesis);
			setState(75);
			match(Identifier);
			setState(76);
			match(RightParenthesis);
			setState(77);
			match(T__1);
			setState(78);
			match(LeftCurlyBracket);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(79);
				match(Identifier);
				}
			}

			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(82);
				match(T__2);
				setState(83);
				match(Identifier);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(RightCurlyBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramMeaningContext extends ParserRuleContext {
		public TerminalNode LeftParenthesis() { return getToken(PdlParser.LeftParenthesis, 0); }
		public TerminalNode Identifier() { return getToken(PdlParser.Identifier, 0); }
		public TerminalNode RightParenthesis() { return getToken(PdlParser.RightParenthesis, 0); }
		public TerminalNode LeftCurlyBracket() { return getToken(PdlParser.LeftCurlyBracket, 0); }
		public TerminalNode RightCurlyBracket() { return getToken(PdlParser.RightCurlyBracket, 0); }
		public List<PairContext> pair() {
			return getRuleContexts(PairContext.class);
		}
		public PairContext pair(int i) {
			return getRuleContext(PairContext.class,i);
		}
		public ProgramMeaningContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programMeaning; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterProgramMeaning(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitProgramMeaning(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitProgramMeaning(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramMeaningContext programMeaning() throws RecognitionException {
		ProgramMeaningContext _localctx = new ProgramMeaningContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_programMeaning);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__3);
			setState(92);
			match(LeftParenthesis);
			setState(93);
			match(Identifier);
			setState(94);
			match(RightParenthesis);
			setState(95);
			match(T__1);
			setState(96);
			match(LeftCurlyBracket);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LeftParenthesis) {
				{
				setState(97);
				pair();
				}
			}

			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__2) {
				{
				{
				setState(100);
				match(T__2);
				setState(101);
				pair();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(RightCurlyBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public TerminalNode LeftParenthesis() { return getToken(PdlParser.LeftParenthesis, 0); }
		public List<TerminalNode> Identifier() { return getTokens(PdlParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(PdlParser.Identifier, i);
		}
		public TerminalNode RightParenthesis() { return getToken(PdlParser.RightParenthesis, 0); }
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pair);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LeftParenthesis);
			setState(110);
			match(Identifier);
			setState(111);
			match(T__2);
			setState(112);
			match(Identifier);
			setState(113);
			match(RightParenthesis);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormulaContext extends ParserRuleContext {
		public FalsityContext falsity() {
			return getRuleContext(FalsityContext.class,0);
		}
		public TruthContext truth() {
			return getRuleContext(TruthContext.class,0);
		}
		public AtomicFormulaContext atomicFormula() {
			return getRuleContext(AtomicFormulaContext.class,0);
		}
		public TerminalNode LeftParenthesis() { return getToken(PdlParser.LeftParenthesis, 0); }
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public TerminalNode RightParenthesis() { return getToken(PdlParser.RightParenthesis, 0); }
		public TerminalNode Not() { return getToken(PdlParser.Not, 0); }
		public TerminalNode LeftSquareBracket() { return getToken(PdlParser.LeftSquareBracket, 0); }
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode RightSquareBracket() { return getToken(PdlParser.RightSquareBracket, 0); }
		public TerminalNode LeftAngle() { return getToken(PdlParser.LeftAngle, 0); }
		public TerminalNode RightAngle() { return getToken(PdlParser.RightAngle, 0); }
		public HoarePartialCorrectnessContext hoarePartialCorrectness() {
			return getRuleContext(HoarePartialCorrectnessContext.class,0);
		}
		public TerminalNode And() { return getToken(PdlParser.And, 0); }
		public TerminalNode Or() { return getToken(PdlParser.Or, 0); }
		public TerminalNode RightArrow() { return getToken(PdlParser.RightArrow, 0); }
		public TerminalNode LeftRightArrow() { return getToken(PdlParser.LeftRightArrow, 0); }
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitFormula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitFormula(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		return formula(0);
	}

	private FormulaContext formula(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		FormulaContext _localctx = new FormulaContext(_ctx, _parentState);
		FormulaContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_formula, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				{
				setState(116);
				falsity();
				}
				break;
			case T__5:
				{
				setState(117);
				truth();
				}
				break;
			case Identifier:
				{
				setState(118);
				atomicFormula();
				}
				break;
			case LeftParenthesis:
				{
				setState(119);
				match(LeftParenthesis);
				setState(120);
				formula(0);
				setState(121);
				match(RightParenthesis);
				}
				break;
			case Not:
				{
				setState(123);
				match(Not);
				setState(124);
				formula(8);
				}
				break;
			case LeftSquareBracket:
				{
				setState(125);
				match(LeftSquareBracket);
				setState(126);
				program(0);
				setState(127);
				match(RightSquareBracket);
				setState(128);
				formula(7);
				}
				break;
			case LeftAngle:
				{
				setState(130);
				match(LeftAngle);
				setState(131);
				program(0);
				setState(132);
				match(RightAngle);
				setState(133);
				formula(6);
				}
				break;
			case LeftCurlyBracket:
				{
				setState(135);
				hoarePartialCorrectness();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(152);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(150);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new FormulaContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_formula);
						setState(138);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(139);
						match(And);
						setState(140);
						formula(6);
						}
						break;
					case 2:
						{
						_localctx = new FormulaContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_formula);
						setState(141);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(142);
						match(Or);
						setState(143);
						formula(5);
						}
						break;
					case 3:
						{
						_localctx = new FormulaContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_formula);
						setState(144);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(145);
						match(RightArrow);
						setState(146);
						formula(4);
						}
						break;
					case 4:
						{
						_localctx = new FormulaContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_formula);
						setState(147);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(148);
						match(LeftRightArrow);
						setState(149);
						formula(3);
						}
						break;
					}
					} 
				}
				setState(154);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class HoarePartialCorrectnessContext extends ParserRuleContext {
		public List<TerminalNode> LeftCurlyBracket() { return getTokens(PdlParser.LeftCurlyBracket); }
		public TerminalNode LeftCurlyBracket(int i) {
			return getToken(PdlParser.LeftCurlyBracket, i);
		}
		public List<FormulaContext> formula() {
			return getRuleContexts(FormulaContext.class);
		}
		public FormulaContext formula(int i) {
			return getRuleContext(FormulaContext.class,i);
		}
		public List<TerminalNode> RightCurlyBracket() { return getTokens(PdlParser.RightCurlyBracket); }
		public TerminalNode RightCurlyBracket(int i) {
			return getToken(PdlParser.RightCurlyBracket, i);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public HoarePartialCorrectnessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hoarePartialCorrectness; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterHoarePartialCorrectness(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitHoarePartialCorrectness(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitHoarePartialCorrectness(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HoarePartialCorrectnessContext hoarePartialCorrectness() throws RecognitionException {
		HoarePartialCorrectnessContext _localctx = new HoarePartialCorrectnessContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_hoarePartialCorrectness);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(LeftCurlyBracket);
			setState(156);
			formula(0);
			setState(157);
			match(RightCurlyBracket);
			setState(158);
			program(0);
			setState(159);
			match(LeftCurlyBracket);
			setState(160);
			formula(0);
			setState(161);
			match(RightCurlyBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FalsityContext extends ParserRuleContext {
		public FalsityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_falsity; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterFalsity(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitFalsity(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitFalsity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FalsityContext falsity() throws RecognitionException {
		FalsityContext _localctx = new FalsityContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_falsity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TruthContext extends ParserRuleContext {
		public TruthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_truth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterTruth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitTruth(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitTruth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TruthContext truth() throws RecognitionException {
		TruthContext _localctx = new TruthContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_truth);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtomicFormulaContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(PdlParser.Identifier, 0); }
		public AtomicFormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atomicFormula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).enterAtomicFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PdlListener ) ((PdlListener)listener).exitAtomicFormula(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PdlVisitor ) return ((PdlVisitor<? extends T>)visitor).visitAtomicFormula(this);
			else return visitor.visitChildren(this);
		}
	}
